--- a/shooting_range_tracker/pubspec.yaml
+++ b/shooting_range_tracker/pubspec.yaml
@@ -23,6 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_riverpod: ^0.13.1
+  flutter_hooks: ^0.16.0
+  hooks_riverpod: ^0.13.1
+  image_picker: ^0.7.4
+
 
 
   # The following adds the Cupertino Icons font to your application.
